@@ -12,7 +12,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -26,7 +25,7 @@ public class TransactionServiceImplement implements TransactionServiceInterface 
 
     @Override
     @Transactional(readOnly = true)
-    public ResponseEntity<ApiResponse> getMyTransactions() {
+    public ResponseEntity<ApiResponse> getMyTransactions(int page, int size) {
         try {
             Account currentAccount = authenUntil.getCurrentUSer();
             if (currentAccount == null) {
@@ -34,36 +33,79 @@ public class TransactionServiceImplement implements TransactionServiceInterface 
                         .body(ApiResponse.fail("UNAUTHORIZED", "Người dùng chưa đăng nhập"));
             }
 
-            List<Transaction> transactions = currentAccount.getTransactions();
-
-            if (transactions == null) {
-                transactions = java.util.Collections.emptyList();
+            List<Transaction> allTransactions = currentAccount.getTransactions();
+            if (allTransactions == null) {
+                allTransactions = java.util.Collections.emptyList();
             }
 
-            List<Map<String, Object>> responseList = transactions.stream()
-                    .sorted((t1, t2) -> {
-                        if (t1.getTransactionDate() == null || t2.getTransactionDate() == null) return 0;
-                        return t2.getTransactionDate().compareTo(t1.getTransactionDate());
-                    })
-                    .map(t -> {
-                        Map<String, Object> item = new java.util.HashMap<>();
-                        item.put("transactionId", t.getTransactionId());
-                        item.put("totalAmount", t.getTotalAmount() != null ? t.getTotalAmount() : 0L);
-                        item.put("transactionType", t.getTransactionType() != null ? t.getTransactionType().name() : "UNKNOWN");
-                        item.put("transactionStatus", t.getTransactionStatus() != null ? t.getTransactionStatus() : "PENDING");
-                        item.put("createdAt", t.getCreatedAt() != null ? t.getCreatedAt().toString() : "");
-                        item.put("contentDescription", t.getContentDescription() != null ? t.getContentDescription() : "");
-                        item.put("checkoutUrl", t.getCheckoutUrl() != null ? t.getCheckoutUrl() : "");
-                        return item;
-                    })
-                    .collect(Collectors.toList());
+            List<Transaction> sortedTransactions = allTransactions.stream()
+                    .sorted(java.util.Comparator.comparing(
+                            Transaction::getTransactionDate,
+                            java.util.Comparator.nullsLast(java.util.Comparator.reverseOrder())
+                    ))
+                    .toList();
+
+            boolean isGetAll = (page == 0 && size == 0);
+
+            List<Map<String, Object>> content;
+            int effectivePage = 0;
+            int effectiveSize = sortedTransactions.size();
+            int totalElements = sortedTransactions.size();
+            int totalPages = 1;
+            boolean isLast = true;
+
+            if (isGetAll) {
+                content = sortedTransactions.stream()
+                        .map(this::convertToMap)
+                        .collect(Collectors.toList());
+            } else {
+                effectiveSize = size > 0 ? size : 20;
+                effectivePage = Math.max(page, 0);
+
+                org.springframework.data.domain.Pageable pageable =
+                        org.springframework.data.domain.PageRequest.of(effectivePage, effectiveSize);
+
+                content = sortedTransactions.stream()
+                        .skip(pageable.getOffset())
+                        .limit(pageable.getPageSize())
+                        .map(this::convertToMap)
+                        .collect(Collectors.toList());
+
+                org.springframework.data.domain.Page<Map<String, Object>> transactionPage =
+                        new org.springframework.data.domain.PageImpl<>(content, pageable, totalElements);
+
+                effectivePage = transactionPage.getNumber();
+                effectiveSize = transactionPage.getSize();
+                totalPages = transactionPage.getTotalPages();
+                isLast = transactionPage.isLast();
+            }
+
+            Map<String, Object> result = new java.util.LinkedHashMap<>();
+            result.put("content", content);
+            result.put("page", effectivePage);
+            result.put("size", effectiveSize);
+            result.put("totalElements", totalElements);
+            result.put("totalPages", totalPages);
+            result.put("last", isLast);
 
             return ResponseEntity.status(HttpStatus.OK)
-                    .body(ApiResponse.success(responseList, "Lấy lịch sử giao dịch ví thành công"));
+                    .body(ApiResponse.success(result, "Lấy lịch sử giao dịch ví thành công"));
 
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
                     .body(ApiResponse.fail("SERVER_ERROR", "Lỗi hệ thống: " + e.getMessage()));
         }
+    }
+
+    private Map<String, Object> convertToMap(Transaction t) {
+        Map<String, Object> item = new java.util.HashMap<>();
+        item.put("transactionId", t.getTransactionId());
+        item.put("totalAmount", t.getTotalAmount() != null ? t.getTotalAmount() : 0L);
+        item.put("transactionType", t.getTransactionType() != null ? t.getTransactionType().name() : "UNKNOWN");
+        item.put("transactionStatus", t.getTransactionStatus() != null ? t.getTransactionStatus() : "PENDING");
+        item.put("createdAt", t.getCreatedAt() != null ? t.getCreatedAt().toString() : "");
+        item.put("contentDescription", t.getContentDescription() != null ? t.getContentDescription() : "");
+        item.put("checkoutUrl", t.getCheckoutUrl() != null ? t.getCheckoutUrl() : "");
+        return item;
     }
 }
